--- a/templates/agents/index.html
+++ b/templates/agents/index.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta name="viewport" content="initial-scale=1.0" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<link rel="apple-touch-icon" href="http://l42.eu/ios.png"/>
+		<link rel="apple-touch-icon" href="/icon"/>
+		<link rel="shortcut icon" href="/icon"/>
 		<script type='text/javascript' src='http://l42.eu/bootloader'></script>
 		<title>LucOs - Contacts</title>
 	</head>
