--- a/templates/agents/agent.html
+++ b/templates/agents/agent.html
@@ -11,7 +11,7 @@
 	<body>
 		<nav>
 			<a href="/agents" class='navback'>&lt;- Contact List</a>
-			<a href="{{ url }}/edit" class='navedit'>Edit -&gt;</a>
+			<a href="{{ editurl }}" class='navedit'>Edit -&gt;</a>
 		</nav>
 		<h1 id='title'>{{ name }}</h1>
 		{%for num in phone %}
