--- a/templates/agents/agent.html
+++ b/templates/agents/agent.html
@@ -21,6 +21,9 @@
                 {%for address in formattedaddresses %}
                         <span class='address'>{{address}}</span>
                 {%endfor%}
+		{%for userid in facebookaccounts %}
+			<span class='facebooklink'><a href="https://www.facebook.com/profile.php?id={{userid}}" target="_blank"><img src="https://graph.facebook.com/{{userid}}/picture" /> Facebook</a></span>
+		{%endfor%}
         {%if relations %}
         <h2>Relations</h2>
 			{% include "agents/agentlist.html" with agents=relations %}
