Make all links to resources relative to current domain to avoid mixed content error on https

--- a/templates/agents/agent-add.html
+++ b/templates/agents/agent-add.html
@@ -4,8 +4,9 @@
 	<head>
 		<meta name="viewport" content="initial-scale=1.0" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<link rel="apple-touch-icon" href="http://l42.eu/ios.png"/>
-		<script type='text/javascript' src='http://l42.eu/bootloader'></script>
+		<link rel="apple-touch-icon" href="/icon"/>
+		<link rel="icon" href="/icon" />
+		<script type='text/javascript' src='/bootloader'></script>
 		<title>LucOs - Add New Contact</title>
 	</head>
 	<body>
