--- a/templates/agents/index.html
+++ b/templates/agents/index.html
@@ -6,7 +6,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link rel="apple-touch-icon" href="/icon"/>
 		<link rel="shortcut icon" href="/icon"/>
-		<script type='text/javascript' src='http://l42.eu/bootloader'></script>
+		<script type='text/javascript' src='/bootloader'></script>
 		<title>LucOs - Contacts</title>
 	</head>
 	<body>
