--- a/templates/agents/index.html
+++ b/templates/agents/index.html
@@ -1,15 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html> 
-<html xmlns="http://www.w3.org/1999/xhtml"> 
-	<head>
-		<meta name="viewport" content="initial-scale=1.0" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<link rel="apple-touch-icon" href="/icon"/>
-		<link rel="shortcut icon" href="/icon"/>
-		<script type='text/javascript' src='/bootloader'></script>
-		<title>LucOs - Contacts</title>
-	</head>
-	<body>
+{% extends "agents/base.html" %}
+
+{% block title %}LucOs - Contacts{% endblock %}
+{% block body %}
 		<nav>
 			<span class='navswitch'>
 				<a href="/agents/all" class="{% if list == "all" %}current{% endif %}">All</a>
@@ -19,5 +11,4 @@
 			<a href="{{addurl}}" class='navedit'>Add -&gt;</a>
 		</nav>
 		{% include "agents/agentlist.html" %}
-	</body>
-</html>
+{% endblock %}
