--- a/templates/agents/base.html
+++ b/templates/agents/base.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta name="viewport" content="initial-scale=1.0" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<link rel="apple-touch-icon" href="/icon"/>
-		<link rel="icon" href="/icon" />
-		<script type='text/javascript' src='/bootloader'></script>
+		<link rel="apple-touch-icon" href="/icon.png"/>
+		<link rel="icon" href="resources/icon.png" />
+		<link rel="stylesheet" href="/resources/style.css" />
 		<title>{% block title %}{% endblock %}</title>
 	</head>
 	<body>
