add simplified lucOS bar

--- a/templates/agents/agent.html
+++ b/templates/agents/agent.html
@@ -1,6 +1,7 @@
 {% extends "agents/base.html" %}
 
-{% block title %}LucOs - {{ name }}{% endblock %}
+{% block headtitle %}LucOs - {{ name }}{% endblock %}
+{% block title %}{{ name }}{% endblock %}
 {% block body %}
 		
 		<nav>
