--- a/templates/agents/index.html
+++ b/templates/agents/index.html
@@ -1,6 +1,7 @@
 {% extends "agents/base.html" %}
 
-{% block title %}LucOs - Contacts{% endblock %}
+{% block headtitle %}LucOs - Contacts{% endblock %}
+{% block title %}Contacts{% endblock %}
 {% block body %}
 		<nav>
 			<span class='navswitch'>
