try to have a consistent colour palette

--- a/templates/agents/base.html
+++ b/templates/agents/base.html
@@ -14,9 +14,9 @@
 			<a href="https://l42.eu/">
 				<img src="https://l42.eu/logo.png" alt="lucOS" style="">
 			</a>
-			<span id="lucos_navbar_title">
+			<h1 id="lucos_navbar_title">
 				{% block title %}{% endblock %}
-			</span>
+			</h1>
 		</div>
 		{% block body %}{% endblock %}
 	</body>
