--- a/templates/resources/style.css
+++ b/templates/resources/style.css
@@ -1,25 +1,23 @@
 .agentlist { list-style-type: none; max-width: 400px; margin: 0 auto; padding: 0; }
-.agentlist a { text-decoration: none; color: inherit; display:block; background: #cc9; padding: 10px; margin: 1px;}
-.agentlist a:hover { background: #9c9; }
+.agentlist a { text-decoration: none; color: inherit; display:block; background: #FFE1CA; padding: 10px; margin: 1px;}
 .agentlist h3 { margin: 0; }
 .agentlist .relation { font-style: italic; font-size: smaller; }
 
-nav a { font-weight: bold; padding: 5px; font-size: 1em; color: #555; border: outset #999; border-radius: 10px; display: block; max-width: 100px; text-decoration: none; margin-bottom: 5px; }
+nav a { font-weight: bold; padding: 5px; font-size: 1em; color: #4D002D; border: outset #4D002D; border-radius: 10px; display: block; max-width: 100px; text-decoration: none; margin-bottom: 5px; }
 nav a:active { border-style: inset; }
 nav { display: block; overflow: hidden; }
 .navback { float: left; padding: 5px; }
 .navedit { float: right; }
 .navswitch { float: left; padding-top:8px; }
 .navswitch a { display: inline; }
-.navswitch a:not(:first-child) { border-left: black solid thin; }
-.navswitch a:not(:last-child) { border-right: black solid thin; }
-.navswitch a.current { background-color: #9c9; color: #fff; }
-a.phonenum { display: block; font-weight: bold; font-family: monospace; font-size: 2em; padding: 0.7em; background: #99f; max-width: 400px; text-align: center; color: #555; text-decoration: none; margin: 0 auto; }
-.agentlist .phonenum { display: block; font-family: monospace; padding: 0.3em 0; text-align: right; }
+.navswitch a.current { background-color: #FFE1CA; }
+a.phonenum { background: #E5B5D1; max-width: 400px; color: #120800; margin: 0 auto; }
+.agentlist .phonenum { display: block; font-family: monospace; padding: 0.3em 0; text-align: center; }
 .address { display: block;
 text-align: center;
 margin: 1em;
 font-weight: bold; white-space: pre; }
+.phonenum { display: block; font-weight: bold; font-family: monospace; font-size: 2em; padding: 0.7em; text-align: center; text-decoration: none; }
 .relation { display: block;}
 h2 { text-align: center; }
 .facebooklink { }
@@ -27,7 +25,28 @@ h2 { text-align: center; }
 .facebooklink a { display: block; margin: 10px auto; max-width: 428px; overflow: hidden; border: outset #3b5998 4px; text-decoration: inherit; color: #3b5998; font-weight: bold; line-height: 50px; text-align: center; background: #dfe3ee; font-size: 20px;}
 .facebooklink a:active { border-style: inset; }
 
-#lucos_navbar { height: 30px; z-index:1000; color: white; position: absolute; left: 0; right: 0; top: 0; font-size: 18px; background-color: black; background-image: -webkit-gradient(linear, 0 100%, 0 0, color-stop(0, transparent), color-stop(0.15, transparent), color-stop(0.9, rgba(255, 255, 255, 0.4))); font-family: Georgia, serif }
+#lucos_navbar { height: 30px; z-index:1000; color: #FFF; position: absolute; left: 0; right: 0; top: 0; font-size: 18px; background-color: #044E00; background-image: -webkit-gradient(linear, 0 100%, 0 0, color-stop(0, transparent), color-stop(0.15, transparent), color-stop(0.9, rgba(255, 255, 255, 0.4))); font-family: Georgia, serif }
 #lucos_navbar img { float: left; height: 25px; padding: 2.5px 2%; cursor: pointer; max-width: 20%; border: none; }
-#lucos_navbar_title { text-align: center; display: block; line-height: 30px; font-weight: bold; position: absolute; width: 50%; margin: 0 25%; z-index: -1; overflow: hidden; height: 30px; text-overflow: ellipsis; white-space: nowrap; }
-body { padding-top: 30px; }
+#lucos_navbar_title { text-align: center; display: block; line-height: 30px; font-weight: bold; position: absolute; width: 50%; margin: 0 25%; z-index: -1; overflow: hidden; height: 30px; text-overflow: ellipsis; white-space: nowrap; font-size: 1em; }
+body { padding-top: 30px;}
+a:hover { background: #B9E7B7; }
+
+/* Colour Palette guide */
+
+.color-primary-0 { color: #287624 }	/* Main Primary color */
+.color-primary-1 { color: #B9E7B7 }
+.color-primary-2 { color: #5A9657 }
+.color-primary-3 { color: #044E00 }
+.color-primary-4 { color: #010F00 }
+
+.color-secondary-1-0 { color: #91592C }	/* Main Secondary color (1) */
+.color-secondary-1-1 { color: #FFE1CA }
+.color-secondary-1-2 { color: #B98E6C }
+.color-secondary-1-3 { color: #612B00 }
+.color-secondary-1-4 { color: #120800 }
+
+.color-secondary-2-0 { color: #732352 }	/* Main Secondary color (2) */
+.color-secondary-2-1 { color: #E5B5D1 }
+.color-secondary-2-2 { color: #93567A }
+.color-secondary-2-3 { color: #4D002D }
+.color-secondary-2-4 { color: #0E0008 }
