--- a/templates/agents/base.html
+++ b/templates/agents/base.html
@@ -18,6 +18,9 @@
 				{% block title %}{% endblock %}
 			</h1>
 		</div>
+		<nav id="subnav">
+			{% block subnav %}{% endblock %}
+		</nav>
 		{% block body %}{% endblock %}
 	</body>
 </html>
