--- a/templates/resources/style.css
+++ b/templates/resources/style.css
@@ -1,17 +1,25 @@
 .agentlist { list-style-type: none; max-width: 400px; margin: 0 auto; padding: 0; }
 .agentlist a { text-decoration: none; color: inherit; display:block; background: #FFE1CA; padding: 10px; margin: 1px;}
+.agentlist a:hover { background-color: #612B00; color: #FFE1CA; }
 .agentlist h3 { margin: 0; }
 .agentlist .relation { font-style: italic; font-size: smaller; }
-
-nav a { font-weight: bold; padding: 5px; font-size: 1em; color: #4D002D; border: outset #4D002D; border-radius: 10px; display: block; max-width: 100px; text-decoration: none; margin-bottom: 5px; }
-nav a:active { border-style: inset; }
-nav { display: block; overflow: hidden; }
-.navback { float: left; padding: 5px; }
-.navedit { float: right; }
-.navswitch { float: left; padding-top:8px; }
-.navswitch a { display: inline; }
-.navswitch a.current { background-color: #FFE1CA; }
+.tools { float: right; margin: 5px;}
+.toollink { font-size: 1em; color: #010F00; background-color: #E5B5D1; border-radius: 4px; display: inline-block; max-width: 100px; text-decoration: none; margin-bottom: 5px; padding: 10px 15px; vertical-align: middle; font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif; font-weight: 400; font-size: 13px; }
+#subnav a { cursor: pointer; }
+nav > a.primary { color: #E5B5D1; background-color: #4D002D; }
+nav { display: block; overflow: hidden; background: #B9E7B7; color: #612B00; margin-bottom: 10px; }
+.navback { float: left; }
+.toollink { background-repeat: no-repeat; background-position: right 7px center; padding-right: 26px; margin: 2px; }
+.navadd, .addlink { background-image: url(/resources/admin/img/icon-addlink.svg); }
+.navedit, .viewsitelink { background-image: url(/resources/admin/img/tooltag-arrowright.svg); }
+.toollink:link, .toollink:visited { background-color: #E5B5D1; color: #010F00; }
+.toollink:hover { background-color: #4D002D; color: #E5B5D1; }
+.navswitch { float: left; margin: 10px 0 }
+.navswitch a { display: inline; text-decoration: none; color: #B98E6C; }
+.navswitch a.current { font-weight: bold; color: #612B00; }
+.navswitch a:hover { text-decoration: underline; }
 a.phonenum { background: #E5B5D1; max-width: 400px; color: #120800; margin: 0 auto; }
+a.phonenum:hover { background-color: #4D002D; color: #E5B5D1; }
 .agentlist .phonenum { display: block; font-family: monospace; padding: 0.3em 0; text-align: center; }
 .address { display: block;
 text-align: center;
@@ -27,9 +35,22 @@ h2 { text-align: center; }
 
 #lucos_navbar { height: 30px; z-index:1000; color: #FFF; position: absolute; left: 0; right: 0; top: 0; font-size: 18px; background-color: #044E00; background-image: -webkit-gradient(linear, 0 100%, 0 0, color-stop(0, transparent), color-stop(0.15, transparent), color-stop(0.9, rgba(255, 255, 255, 0.4))); font-family: Georgia, serif }
 #lucos_navbar img { float: left; height: 25px; padding: 2.5px 2%; cursor: pointer; max-width: 20%; border: none; }
-#lucos_navbar_title { text-align: center; display: block; line-height: 30px; font-weight: bold; position: absolute; width: 50%; margin: 0 25%; z-index: -1; overflow: hidden; height: 30px; text-overflow: ellipsis; white-space: nowrap; font-size: 1em; }
-body { padding-top: 30px;}
-a:hover { background: #B9E7B7; }
+#lucos_navbar_title { text-align: center; display: block; line-height: 30px; font-weight: bold; position: absolute; width: 50%; margin: 0 25%; z-index: -1; overflow: hidden; height: 30px; text-overflow: ellipsis; white-space: nowrap; font-size: 1em; color: inherit; }
+body { padding-top: 30px; margin: 0; }
+#lucos_navbar a { color: #612B00; border: none; }
+#lucos_navbar a:hover { background: inherit; color: #B98E6C; }
+
+/* Admin site */
+div.breadcrumbs { background: none; color: #612B00; float: left; padding: 5px; border: none; font-size: 14px; text-align: left; margin: 5px; }
+div.breadcrumbs a { color: #B98E6C; }
+div.breadcrumbs a:hover { color: inherit; }
+.module h2, .module caption, .inline-group h2 { background: #B9E7B7; color: #612B00; }
+a.section:link, a.section:visited { color: #612B00; }
+.module a { color: #91592C; }
+.module a:hover { background: inherit; }
+.button, input[type=submit], input[type=button], .submit-row input, a.button { background: #E5B5D1; color: #010F00; }
+.button.default, input[type=submit].default, .submit-row input.default { background: #732352; color: #E5B5D1;}
+#username { float: right; margin: 5px; font-size: smaller; }
 
 /* Colour Palette guide */
 
