--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -11,8 +11,8 @@
 
     <meta name="viewport" content="initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="/icon.png"/>
-    <link rel="icon" href="resources/icon.png" />
+    <link rel="apple-touch-icon" href="/resources/logo.png"/>
+    <link rel="icon" href="/resources/logo.png" />
     <link rel="stylesheet" href="/resources/style.css" />
     <title>{% block headtitle %}{% endblock %}</title>
 </head>
