--- a/templates/agents/base.html
+++ b/templates/agents/base.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta name="viewport" content="initial-scale=1.0" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<link rel="apple-touch-icon" href="/icon.png"/>
-		<link rel="icon" href="resources/icon.png" />
+		<link rel="apple-touch-icon" href="/resources/logo.png"/>
+		<link rel="icon" href="/resources/logo.png" />
 		<link rel="stylesheet" href="/resources/style.css" />
 		<title>{% block headtitle %}{% endblock %}</title>
 	</head>
