--- a/app/templates/resources/style.css
+++ b/app/templates/resources/style.css
@@ -42,8 +42,8 @@ h2 { text-align: center; }
 #bio, #notes, #gifts, #birthday { max-width: 428px; margin: 10px auto; }
 #gifts { white-space: pre-line; }
 #birthday .label { font-weight: bold; }
-#dead { background-color: #333340; color: #fff; font-family: cursive; padding: 0.7em; text-align: center; margin: 0.5em auto; }
-#dead .rest-in-peace { display: block; font-size: 2em; }
+#dead { background-color: #333340; color: #fff; font-family: Brush Script Std, cursive; padding: 0.7em; text-align: center; margin: 0.5em auto; }
+#dead .rest-in-peace { display: block; font-size: 2em; font-family: Snell Roundhand, Brush Script MT, Brush Script Std, cursive; }
 
 #lucos_navbar { height: 30px; z-index:1000; color: #FFF; position: absolute; left: 0; right: 0; top: 0; font-size: 18px; background-color: #044E00; background-image: -webkit-gradient(linear, 0 100%, 0 0, color-stop(0, transparent), color-stop(0.15, transparent), color-stop(0.9, rgba(255, 255, 255, 0.4))); font-family: Georgia, serif }
 #lucos_navbar img { float: left; height: 25px; padding: 2.5px 2%; cursor: pointer; max-width: 20%; border: none; }
