don't force_escape html, as it's already escaped by default - resulting in over-escaping

--- a/app/templates/agents/agenttable.html
+++ b/app/templates/agents/agenttable.html
@@ -14,7 +14,7 @@
 			<tr>
 				<td>
 					<a href="{{agent.url}}">
-					{% filter force_escape %}{{ agent.name }}{% endfilter %}
+					{{ agent.name }}
 					</a>
 				</td>
 				{% if list == "gifts" %}
