--- a/app/templates/agents/agentlist.html
+++ b/app/templates/agents/agentlist.html
@@ -2,8 +2,8 @@
 		<ul class='agentlist'>
 		{%for agent in agents %}
 			<li><a href="{{agent.url}}" {% if agent.isDead %}class="isdead"{% endif %}>
-				<h3>{% filter force_escape %}{{ agent.name }}{% endfilter %}</h3>
-				<span class='relation'>{% filter force_escape %}{{agent.rel}}{% endfilter %}</span>
+				<h3>{{ agent.name }}</h3>
+				<span class='relation'>{{agent.rel}}</span>
 			{% if list == "postal" %}
                 		{%for address in agent.formattedaddresses %}
                         		<span class='address'>{{address}}</span>
