--- a/app/templates/agents/base.html
+++ b/app/templates/agents/base.html
@@ -10,17 +10,13 @@
 		<title>{% block headtitle %}{% endblock %}</title>
 	</head>
 	<body>
-		<div id="lucos_navbar">
-			<a href="https://l42.eu/">
-				<img src="https://l42.eu/logo.png" alt="lucOS" style="">
-			</a>
-			<h1 id="lucos_navbar_title">
-				{% block title %}{% endblock %}
-			</h1>
-		</div>
+		<lucos-navbar bg-colour="#044E00">
+			<a href="/">{% block title %}{% endblock %}</a>
+		</lucos-navbar>
 		<nav id="subnav">
 			{% block subnav %}{% endblock %}
 		</nav>
 		{% block body %}{% endblock %}
+		<script src="/resources/lucos_navbar.js" type="text/javascript"></script>
 	</body>
 </html>
