--- a/app/templates/agents/base.html
+++ b/app/templates/agents/base.html
@@ -18,5 +18,6 @@
 		</nav>
 		{% block body %}{% endblock %}
 		<script src="/resources/lucos_navbar.js" type="text/javascript"></script>
+		<script src="/resources/script.js" type="text/javascript"></script>
 	</body>
 </html>
