--- a/app/templates/agents/index.html
+++ b/app/templates/agents/index.html
@@ -8,10 +8,11 @@
 {% block subnav %}
 	<div class="breadcrumbs">
 		<span class="navswitch">
-			<a href="/agents/all" class="{% if list == "all" %}current{% endif %}">All</a> |
+			<a href="/agents/starred" class="{% if list == "starred" %}current{% endif %}">Starred</a> |
 			<a href="/agents/phone" class="{% if list == "phone" %}current{% endif %}">Phonebook</a> |
 			<a href="/agents/postal" class="{% if list == "postal" %}current{% endif %}">Address Book</a> |
-			<a href="/agents/gifts" class="{% if list == "gifts" %}current{% endif %}">Gift List</a>
+			<a href="/agents/gifts" class="{% if list == "gifts" %}current{% endif %}">Gift List</a> |
+			<a href="/agents/all" class="{% if list == "all" %}current{% endif %}">All</a>
 		</span>
 	</div>
 	<nav class="tools">
