Add loganne integration Moves the logic for get agent data into the model so it's easier to access in multiple places Loganne calls added when a contact gets added, edited, removed, starred or unstarred

--- a/app/templates/agents/agentlist.html
+++ b/app/templates/agents/agentlist.html
@@ -2,7 +2,7 @@
 		<ul class='agentlist'>
 		{%for agent in agents %}
 			<li><a href="{{agent.url}}" {% if agent.isDead %}class="isdead"{% endif %}>
-				<span class="star" data-agentid="{{agent.agent.id}}" data-starred="{{agent.starred}}"></span>
+				<span class="star" data-agentid="{{agent.id}}" data-starred="{{agent.starred}}"></span>
 				<h3>{{ agent.name }}</h3>
 				<span class='relation'>{{agent.rel}}</span>
 			{% if list == "postal" %}
