--- a/app/templates/agents/agent.html
+++ b/app/templates/agents/agent.html
@@ -23,7 +23,7 @@
 		{%endif%}
 		{%if bio %}
 			<div id="bio">
-				{{bio}}
+				<span class="content">{{bio}}</span>
 			</div>
 		{%endif%}
 		
@@ -50,7 +50,7 @@
 		{%if giftideas %}
 			<details id="giftideas">
 				<summary>Gift Ideas</summary>
-				<span class='content'>{{giftideas}}</span>
+				<span class="content">{{giftideas}}</span>
 			</details>
 		{%endif%}
 		{%if relations %}
