style notes field better

--- a/app/templates/agents/agent.html
+++ b/app/templates/agents/agent.html
@@ -44,7 +44,7 @@
 		{%if notes %}
 			<div id="notes">
 				<h2>Notes</h2>
-				{{notes}}
+				<span class="content">{{notes}}</span>
 			</div>
 		{%endif%}
 		{%if giftideas %}
